--- a/.github/workflows/kai.yml
+++ b/.github/workflows/kai.yml
@@ -43,4 +43,4 @@ jobs:
     - name: Run tests
       run: |
         PATH="~/.roswell/bin:$PATH"
-        rove kai.asd
+        sbcl --eval "(asdf:test-system :kai)" --quit
